# spirecomm

./: GAME_STATE_SPECIFICATION.md  HTTP_API.md  README.md  run_http_server.bat  run_http_server_debug.bat  setup.py
cpp_client/: CMakeLists.txt  README.md
cpp_client/examples/: CMakeLists.txt  example_ai.cpp  full_game_test.cpp  simple_combat_ai.cpp
cpp_client/include/spirecomm/: client.hpp  types.hpp
cpp_client/src/: client.cpp
examples/: combat_test_client.py  full_game_test.py
http_bridge/: README.md  bridge.py  requirements.txt  test_bridge.py
http_bridge/examples/: README.md  curl_examples.sh  fuzz_test.py
http_bridge/fixtures/sample/: states.jsonl
spirecomm/: http_client.py  http_server.py
spirecomm/communication/: action_factory.py  coordinator.py
spirecomm/spire/: card.py  character.py  game.py  map.py  potion.py  power.py  relic.py  screen.py
